--- a/CycleGAN.ipynb
+++ b/CycleGAN.ipynb
@@ -650,7 +650,7 @@
       },
       "outputs": [],
       "source": [
-        "######## set epochs number ########--------------------------------------------\n",
+        "# set epochs number\n",
         "EPOCHS = 512 #@param {type:\"slider\", min:1, max:512, step:1} "
       ]
     },
