--- a/CycleGAN.ipynb
+++ b/CycleGAN.ipynb
@@ -767,6 +767,7 @@
         "  print(generator_f_gradients)\n",
         "  print(discriminator_x_gradients)\n",
         "  print(discriminator_y_gradients)\n",
+        "  \n",
         "  # 将梯度应用于优化器。\n",
         "  generator_g_optimizer.apply_gradients(zip(generator_g_gradients, \n",
         "                                            generator_g.trainable_variables))\n",
@@ -778,8 +779,7 @@
         "                                                discriminator_x.trainable_variables))\n",
         "  \n",
         "  discriminator_y_optimizer.apply_gradients(zip(discriminator_y_gradients,\n",
-        "                                                discriminator_y.trainable_variables))\n",
-        "  \n"
+        "                                                discriminator_y.trainable_variables))"
       ]
     },
     {
